tooling/nargo_cli/tests/snapshots/execution_success/databus_two_calldata_simple/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut idx: u32, y: [u32; 2], z: [u32; 4]) -> return_data u32 {
    let a: u32 = y[idx];
    let b: u32 = z[idx];
    a + b
}
